# HttpServer

./: .gitignore  CMakeLists.txt  README.md
cmake/: http_serverConfig-release.cmake  http_serverConfig.cmake
include/: BasicHttpPacket.hpp  Defines.hpp  FileLogger.hpp  FileReader.hpp  HttpServer.hpp  RequestHandle.hpp  ResponseGenerators.hpp  ResponseTypes.hpp  Session.hpp  SessionManager.hpp
include/http/: HttpServer.hpp  Request.hpp  Response.hpp  ResponseTemplates.hpp  SessionManager.hpp  Url.hpp
include/system/: FileLogger.hpp  FileReader.hpp  Time.hpp
lib/cml/: CMakeLists.txt
lib/http_server/: CMakeLists.txt
lib/http_server/impl/server/http/: ContentTypeConvertings.cpp  HttpServer.cpp  QueryStringParser.cpp  ResponseGenerators.cpp  ResponseTemplates.cpp  Session.cpp  SessionManager.cpp  Url.cpp
lib/http_server/impl/system/: FileLogger.cpp  FileReader.cpp  Time.cpp
lib/http_server/impl/util/: KeyValueParser.cpp
lib/http_server/include/webcpp/http/: ContentTypeConvertings.hpp  HttpServer.hpp  HttpServer_fwd.hpp  HttpTypes.hpp  QueryStringParser.hpp  QueryStringParser_fwd.hpp  Request.hpp  Response.hpp  ResponseGenerators.hpp  ResponseTemplates.hpp  Session.hpp  SessionManager.hpp
lib/http_server/include/webcpp/system/: FileReader_fwd.hpp
lib/http_server/tests/: CMakeLists.txt
lib/http_server/tests/src/: QueryStringParserTest.cpp  RequestTest.cpp  UrlFunctionsTest.cpp
libs/HttpServerLib/: CMakeLists.txt
libs/HttpServerLib/impl/server/http/: ContentTypeConvertings.cpp  HttpServer.cpp  QueryStringParser.cpp  ResponseGenerators.cpp  ResponseTemplates.cpp  Session.cpp  SessionManager.cpp  Url.cpp
libs/HttpServerLib/impl/system/: FileLogger.cpp  FileReader.cpp  Time.cpp
libs/HttpServerLib/impl/util/: KeyValueParser.cpp
libs/HttpServerLib/include/http/: Defines.hpp  HttpServer.hpp  HttpTypes.hpp  QueryStringParser.hpp  Request.hpp  Request_fwd.hpp  Response.hpp  ResponseGenerators.hpp  ResponseTemplates.hpp  Response_fwd.hpp  Session.hpp  SessionManager.hpp  SessionManager_fwd.hpp  Session_fwd.hpp  Url.hpp
libs/HttpServerLib/include/system/: FileLogger.hpp  FileLogger_fwd.hpp  FileReader.hpp  Time.hpp
libs/HttpServerLib/include/util/: KeyValueParser.hpp  KeyValueParser_fwd.hpp
log/: .gitignore
res/scripts/: checkers.js
res/styles/: checkers.css  registration.css
res/templates/: checkers.html  registration.html
src/: main.cpp
src/Server/: BasicHttpPacket.cpp  FileLogger.cpp  FileReader.cpp  HttpServer.cpp  RequestHandle.cpp  ResponseGenerators.cpp  Session.cpp  SessionManager.cpp
src/server/http/: HttpServer.cpp  ResponseGenerators.cpp  ResponseTemplates.cpp  Session.cpp  Url.cpp
src/system/: FileLogger.cpp  FileReader.cpp
tests/: CMakeLists.txt
tests/src/: QueryStringParserTest.cpp  RequestTest.cpp  Test_1.cpp  UrlFunctionsTest.cpp
